--- a/voluntariado-front/Contacto.html
+++ b/voluntariado-front/Contacto.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+    <a href="https://wa.me/50236554949" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
     <!-- Page Preloder -->
@@ -83,6 +83,7 @@
                 <div class="col-lg-3 contact-info mb-5 mb-lg-0">
                     <p>Dirección: 4 Calle 5-52 zona 13 guatemala 01013-Guatemala, Guatemala </p>
                     <p>Teléfono: +(502) 2292 0286</p>
+                    <p>Teléfono para reservaciones: +(502) 3655 4949</p>
                     <p>Correo electrónico: informacion@visiondefe.org.gt</p>
                 </div>
                 <div class="col-lg-9">
