--- a/voluntariado-front/Noticias.html
+++ b/voluntariado-front/Noticias.html
@@ -31,10 +31,9 @@
 </head>
 
 <body onload="obtenerDatos()">
-    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+    <a href="https://wa.me/50236554949" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
-
-
+    </a>
         <!-- Page Preloder -->
         <div id="preloder">
             <div class="loader"></div>
