--- a/voluntariado-front/QuienesSomos.html
+++ b/voluntariado-front/QuienesSomos.html
@@ -29,8 +29,9 @@
 
 <body>
 
-    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+    <a href="https://wa.me/50236554949" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
+    </a>
         <!-- Page Preloder -->
         <div id="preloder">
             <div class="loader"></div>
@@ -84,9 +85,6 @@
 
                                 <p align="justify">Es así como el 26 de octubre de 1986 nace la Iglesia Cristiana Visión de Fe. En la actualidad y gracias al Señor la Iglesia ha crecido de una forma muy especial y como consecuencia de ello hay iglesias Visión de Fe en varios
                                     países y en el interior de la república de Guatemala.</p>
-
-                                <p align="justify">Visión de Fe es una iglesia que nació en el corazón de los pastores Vladimiro y Juani de Vásquez, atendiendo el llamado del Señor a iniciar un ministerio en donde las personas necesitadas pudieran encontrar amor, ministración
-                                    y libertad de las ataduras que pudieran estar afectándoles. </p>
                             </div>
                         </div>
                     </div>
