--- a/voluntariado-front/Transmisiones.html
+++ b/voluntariado-front/Transmisiones.html
@@ -31,8 +31,9 @@
 </head>
 
 <body>
-    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+    <a href="https://wa.me/50236554949" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
+    </a>
         <!-- Page Preloder -->
         <div id="preloder">
             <div class="loader"></div>
@@ -101,7 +102,7 @@
 
 
         <!-- Service box section start -->
-        <div class="service-box-section spad set-bg" data-setbg="img/paper.png">
+        <div class="service-box-section spad set-bg fin">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
@@ -117,6 +118,8 @@
                         <h2 align="center">
                             <Font color="white"> Siguenos en nuestra red social de Facebook</Font>
                         </h2>
+                        <br>
+                        <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Figlesiavisiondefe%2Fvideos%2F1245576049280681%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
                         <br>
                         <div id="fb-root"></div>
                         <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
