--- a/voluntariado-front/Peticiones.html
+++ b/voluntariado-front/Peticiones.html
@@ -29,8 +29,9 @@
 </head>
 
 <body>
-    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+    <a href="https://wa.me/50236554949" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
+    </a>
         <!-- Page Preloder -->
         <div id="preloder">
             <div class="loader"></div>
