--- a/voluntariado-front/index.html
+++ b/voluntariado-front/index.html
@@ -156,7 +156,7 @@
     </footer>
     <!-- Footer section end -->
 
-    <a href="https://web.whatsapp.com/" class="btn-wsp" target="_blank">
+    <a href="https://wa.me/50236554949" class="btn-wsp" target="_blank">
         <i class="icon-whatsapp"></i>
     </a>
 
