--- a/voluntariado-front/Transmisiones.html
+++ b/voluntariado-front/Transmisiones.html
@@ -145,12 +145,12 @@
         <!--<footer class="footer-section">-->
 
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-        <!--<div class="copyright">Copyright &copy;
+        <div class="copyright">Copyright &copy;
                 <script>
                     document.write(new Date().getFullYear());
                 </script> All rights reserved. <br>This template is made with <i class="fa fa-heart-o"
                     aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-            </div>-->
+            </div>
         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         <!--</footer>-->
         <!-- Footer section end -->
