--- a/voluntariado-front/Peticiones.html
+++ b/voluntariado-front/Peticiones.html
@@ -178,6 +178,7 @@
 			.then(response =>{
 				console.log(response);
                 alert(response.Mensaje)
+                location.href = "Peticiones.html";
 			})
     }
         </script>
