--- a/voluntariado-front/index.html
+++ b/voluntariado-front/index.html
@@ -53,6 +53,7 @@
                     <li><a href="Transmisiones.html">Transmisiones</a></li>
                     <li><a href="Noticias.html">Noticias</a></li>
                     <li><a href="Peticiones.html">Peticiones de Oración</a></li>
+                    <li><a href="Contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
